--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,6 +19,11 @@ html
         |  D0P3TBOT
       // Header Navbar: style can be found in header.less
       nav.navbar.navbar-static-top(role='navigation')
+        a.navbar-btn.sidebar-toggle(href='#', data-target='#atas', data-toggle='offcanvas', role='button')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
         #atas.collapse.navbar-collapse
           .navbar-left
           .navbar-right
